--- a/.github/workflows/push-to-github-packages.yaml
+++ b/.github/workflows/push-to-github-packages.yaml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Publish Docker image
 
 on:
@@ -12,7 +7,7 @@ on:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Push Docker image to GitHub Registry
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -30,22 +25,12 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Log in to GitHub Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/fdw/fava-docker
-          tags: |
-            type=raw,value=latest,enabled={{is_default_branch}}
-            type=ref,event=branch,enabled={{!is_default_branch}}
-            type=ref,event=pr
 
       - name: Build and push Docker image
         id: push
@@ -54,8 +39,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ghcr.io/fdw/fava-docker:latest
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
